[package]
name = "jigsaw"
version = "0.1.0"
authors = ["Hadrien Grasland <hadrien.grasland@gmx.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

[dev-dependencies]
criterion = "0.3"
quickcheck = "0.9"

[[bench]]
name = "benchmark"
harness = false