[package]
name = "jigsaw"
version = "0.1.0"
authors = ["Hadrien Grasland <hadrien.grasland@gmx.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
more-asserts = "0.2"

[dev-dependencies]
criterion = "0.3"
env_logger = "0.8"
genawaiter = "0.99"
plotters = "0.3"
quickcheck = "0.9"
rand = "0.8"
rayon = "1.5"

[[bench]]
name = "benchmark"
harness = false